# opencv_cpp_study

./: 1001_canny_edge.cpp  101_read_image.cpp  102_save_image.cpp  1101_find_draw_contour.cpp  1102_contour_center.cpp  1104_contour_perimeter.cpp  1105_contour_bounding.cpp  1201_histogram_equal.cpp  1202_histogram.cpp  1203_histogram_clahe.cpp  1301_houghline_math.cpp  1302_houghline_statistic.cpp  201_video_from_camera.cpp  202_video_from_file.cpp  203_video_recording.cpp  301_draw_line.cpp  302_draw_rect.cpp  303_draw_circle.cpp  304_put_text.cpp  401_get_pixel_color.cpp  402_change_pixel_value.cpp  403_get_image_size.cpp  404_get_image_roi.cpp  501_add_2_image.cpp  502_bit_image_operation.cpp  601_color_space_gray.cpp  602_color_space_hsv.cpp  603_get_hue_value.cpp  604_tracking_obj_w_color.cpp  701_threshold.cpp  702_otsu_binary.cpp  801_flip_image.cpp  802_image_resize.cpp  803_move_image.cpp  804_rotate_image.cpp  805_affine_transform.cpp  806_perspective_transform.cpp  901_erosion_image.cpp  902_dilation_image.cpp  903_morph_ex_image.cpp  (+6 more)
doc/: cmake_build.md  cplusplus_operator.md  cplusplus_template_functions.md  cplusplus_vector_expression.md  cplusplus_vector_template.md  cplusplus_vs_code_recommand.md  install_opencv_linux.md
